# SentimentAnalysis-CPP

./: CMakeLists.txt  README.md
AutoProcessor/Sentence/: SentenceAutoSentiment.cpp  SentenceAutoSentiment.h  TurkishSentenceAutoSentiment.cpp  TurkishSentenceAutoSentiment.h  TurkishSentenceBasicAutoSentiment.cpp  TurkishSentenceBasicAutoSentiment.h
include/: AnnotatedWord.h  MorphologicalParse.h  ViewLayerType.h
