cmake_minimum_required(VERSION 3.17)
project(SentimentAnalysis)
set(CMAKE_CXX_STANDARD 17)
include_directories(include)
link_directories(library)
add_library(SentimentAnalysis AutoProcessor/Sentence/SentenceAutoSentiment.cpp AutoProcessor/Sentence/SentenceAutoSentiment.h AutoProcessor/Sentence/TurkishSentenceAutoSentiment.cpp AutoProcessor/Sentence/TurkishSentenceAutoSentiment.h)
target_link_libraries(SentimentAnalysis AnnotatedSentence Corpus DependencyParser Dictionary FrameNet MorphologicalAnalysis MorphologicalDisambiguation NamedEntityRecognition PropBank SentiNet WordNet XmlParser)
